# client_server_subscriber

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sample_client.cc  sample_server.cc
client/: client.cc  client.h  file_reader.cc  file_reader.h
common/: file_reader.cc  file_reader.h  news_item.cc  news_item.h
include/: client_proxy.h  server.h
server/: client_manager_thread.cc  client_manager_thread.h  client_proxy.h  server.cc  server.h  server_subscriber_delegate.h  subscriber.cc  subscriber.h  subscriber_item.h  subscriber_writer_thread.cc  subscriber_writer_thread.h
src/: client.cc  server.cc
